--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         </div>
         
         <!-- The Big Card -->
-        <a href="https://www.breville.com" target="_blank" class="spotlight-link">
+        <a href="https://www.usa.canon.com/shop/p/eos-r6-mark-ii-rf24-105mm-f4-l-is-usm-lens-kit?color=Black&type=New" target="_blank" class="spotlight-link">
             <article class="spotlight-card">
                 <div class="spotlight-image-container">
                     <img src="https://s7d1.scene7.com/is/image/canon/5666C011_eos-r6-mark-ii-rf24-105mm-f4-l-is-usm_primary?fmt=webp-alpha&wid=800" alt="EOS R6 Mark II RF24-105mm F4 L IS USM Lens Kit" class="spotlight-image">
@@ -460,7 +460,7 @@
                     <span class="spotlight-badge">Sale</span>
                     <h2 class="spotlight-title">EOS R6 Mark II RF24-105mm F4 L IS USM Lens Kit</h2>
                     <span class="spotlight-price">$3,249.00</span>
-                    <span class="spotlight-cta">Jacob will contribute up to $1000, bringing the price down to $2,249.00</span>
+                    <span class="spotlight-cta">Jacob will contribute up to $1000, bringing the price down to $2,249*</span>
                 </div>
             </article>
         </a>
@@ -500,6 +500,10 @@
         
         <div class="total-display" id="total-display">Total: $0.00</div>
     </section>
+
+    <footer>
+        *Jacob will contribute up to $1,000 toward the purchase of the item. His contribution will be limited to the funds he has available at the time of purchase; if his available funds are below $1,000, he is only responsible for the amount he has. No additional purchase or payment is required. Offer ends on 3/26/26.
+    </footer>
 
     <script>
         // ==========================================
