--- a/index.html
+++ b/index.html
@@ -641,9 +641,9 @@
             },
             {
                 title: "iPhone 13 Carbon Fiber Case",
-                price: "$53.00",
-                image: "https://apexcarbonusa.com/cdn/shop/files/Blackcarbon.jpg?v=1757908128&width=1346",
-                link: "https://apexcarbonusa.com/products/carbon-fiber-iphone-case?variant=44931195404503",
+                price: "$34.95",
+                image: "https://www.reborndevice.com/cdn/shop/files/IP13Bild1_1bab4a43-1ff8-4c0d-ae0e-612e6386df49.jpg?v=1761649919&width=1000",
+                link: "https://www.reborndevice.com/products/carbon-fiber-case-v3?variant=46497652375901&utm_source=google&utm_medium=cpc&utm_campaign=PMax-All-Products-noAds-USA-%5BGZM%5D&utm_content=&utm_term=&utm_position=&utm_device=c&utm_placement=&utm_target=&utm_matchtype=&gad_source=1&gad_campaignid=21131629352&gbraid=0AAAAAB9sybfrML7RX75EuDRCeTd2gX3cE&gclid=CjwKCAiA-sXMBhAOEiwAGGw6LKrM84OpktEphsLYv5sgN6wBiICT61bw2mXVUx5nO6SvHc4MbYCbZRoCpF8QAvD_BwE",
                 badge: { text: "Sale", color: "#ef4444" } // Red color
             }
         ];
